; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/synctex/extr_synctex_parser.c__synctex_free_input.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/synctex/extr_synctex_parser.c__synctex_free_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_synctex_free_input(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %14

5:                                                ; preds = %1
  %6 = load i64, i64* %2, align 8
  %7 = call i32 @SYNCTEX_SIBLING(i64 %6)
  %8 = call i32 @SYNCTEX_FREE(i32 %7)
  %9 = load i64, i64* %2, align 8
  %10 = call i64 @SYNCTEX_NAME(i64 %9)
  %11 = call i32 @free(i64 %10)
  %12 = load i64, i64* %2, align 8
  %13 = call i32 @free(i64 %12)
  br label %14

14:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @SYNCTEX_FREE(i32) #1

declare dso_local i32 @SYNCTEX_SIBLING(i64) #1

declare dso_local i32 @free(i64) #1

declare dso_local i64 @SYNCTEX_NAME(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
